--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,13 @@
       <% if (userIsMember) { %>
         <small>
           Posted by <%= msg.author %> on <%= new Date(msg.timestamp).toLocaleString() %>
-        </small>
+        </small><br>
+      <% } %>
+
+      <% if (currentUser?.membership_status === "admin") { %>
+        <form action="/message/<%= msg.id %>/delete" method="POST" style="display:inline;">
+          <button type="submit" onclick="return confirm('Are you sure you want to delete this message?')">Delete</button>
+        </form>
       <% } %>
     </div>
   <% }) %>
-<% } %>
