--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 
       <% if (userIsMember) { %>
         <small>
-          Posted by <%= msg.author %> on <%= new Date(msg.timestamp).toLocaleString() %>
+          Posted by <%= msg.author %> on <%= new Date(msg.timestamp).toLocaleString("en-GB", { dateStyle: "short", timeStyle: "short" }) %>
         </small><br>
       <% } %>
 
