--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,12 @@
       <p><%= msg.text %></p>
 
       <% if (userIsMember) { %>
-        <small>
-          Posted by <%= msg.author %> on <%= new Date(msg.timestamp).toLocaleString("en-GB", { dateStyle: "short", timeStyle: "short" }) %>
-        </small><br>
+        <div style="margin-bottom: 0.5rem;">
+          <small>
+            Posted by <%= msg.author %> on
+            <%= new Date(msg.timestamp).toLocaleString("en-GB", { dateStyle: "short", timeStyle: "short" }) %>
+          </small>
+        </div>
       <% } %>
 
       <% if (currentUser?.membership_status === "admin") { %>
@@ -35,6 +38,6 @@
           <button type="submit" onclick="return confirm('Are you sure you want to delete this message?')">Delete</button>
         </form>
       <% } %>
-    </div>
+          </div>
   <% }) %>
 <% } %>
