--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,8 @@
   <button type="submit">Log In</button>
 </form>
 
-<% if (error) { %>
-  <p style="color: red;"><%= error %></p>
+<% if (error && error.length > 0) { %>
+  <% error.forEach(err => { %>
+    <p style="color: red;"><%= err %></p>
+  <% }) %>
 <% } %>
